# advent

./: LICENSE  advent.cabal  stack.yaml
data/: 19b.txt
src/: AdventUtil.hs  Main.hs  P1.hs  P10.hs  P11.hs  P12.hs  P13.hs  P14.hs  P15.hs  P16.hs  P17.hs  P18.hs  P19.hs  P2.hs  P20.hs  P21.hs  P22.hs  P23.hs  P24.hs  P25.hs  P3.hs  P4.hs  P5.hs  P6.hs  P7.hs  P8.hs  P9.hs  Tree.hs  state.hs
