name:                advent
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/ahgilbert/advent#readme
license:             BSD3
license-file:        LICENSE
author:              Alan Gilbert
maintainer:          alan.h.gilbert@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable advent
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       AdventUtil , P1 , P2 , P3 , P4 , P5 , P6 , P7 , P8 , P9
                     , P10 , P11 , P12 , P13 , P14 , P15 , P16 , P17
  build-depends:       base >= 4.7 && < 5
                       , megaparsec
                       , array
                       , mtl
                       , json